--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,8 @@ body {
     border-radius: 0px 10px 10px 0px;
     margin-left: -5px;
     color: #FFFF;
-    background-color: #0065fc;
-    border-color: #0065fc;
+    background-color: var(--main-color);
+    border-color: var(--main-color);
     height: 32px;
     border-style: none;
 }
@@ -100,7 +100,7 @@ body {
 .searchbar {
     font-size: 18px;
     border-radius: 1px;
-    border-color: #F2F2F2;
+    border-color: var(--main-bg-color);
     border-style: solid;
     padding-bottom: 5px;
     height: 22px;
@@ -112,7 +112,7 @@ body {
 .filters-container .filters .disabled-filter {
     border-radius: 25px;
     border: solid;
-    border-color: #f2f2f2;
+    border-color: var(--main-bg-color);
     background-color: #FFFF;
     display: flex;
     justify-content: space-between;
@@ -126,10 +126,10 @@ body {
 /* Boutons filtres : transition en bleu clair au survol */
 .filters .disabled-filter:hover {
     cursor: pointer;
-    box-shadow: inset 0 0 0 0 #F2F2F2;
+    box-shadow: inset 0 0 0 0 var(--main-bg-color);
     transition: ease-in 0.3s;
     outline: none;
-    background-color: #DEEBFF;
+    background-color: var(--filter-bg-color);
 }
 
 /* Taille des bouttons filtres */
@@ -149,7 +149,7 @@ body {
 }
 
 .filters-container .filters .disabled-filter i {
-    color: #0065FC;
+    color: var(--main-color);
 }
 
 .title-info .fa {
@@ -161,9 +161,9 @@ body {
     border: solid;
     border-width: 2px;
     border-radius: 50%;
-    border-color: #f2f2f2;
+    border-color: var(--main-bg-color);
     background-color: #FFFF;
-    color: #0065FC;
+    color: var(--main-color);
 }
 
 .title-info i {
@@ -278,7 +278,7 @@ section {
 }
 
 .card-marseille .stars-marseille {
-    color:#0065FC;
+    color:var(--main-color);
     margin-left: 2%;
 }
 
@@ -293,7 +293,7 @@ section {
 }
 
 .fa-chart-line {
-    color:#0065FC;
+    color:var(--main-color);
     margin-top: 39px;
     margin-right: 7%;
 }
@@ -343,11 +343,11 @@ section {
 }
 
 .card-pop .stars-pop {
-    color:#0065FC;
+    color:var(--main-color);
 }
 
 .greystar {
-    color: #f2f2f2;
+    color: var(--main-bg-color);
 }
 
 .card-pop .link {
@@ -414,7 +414,7 @@ section {
 /* Footer */
 footer {
     display: flex;
-    background-color: #f2f2f2;
+    background-color: var(--main-bg-color);
     justify-content: center;
 }
 
@@ -462,13 +462,13 @@ body footer a {
 }
 
 .ancre .menu-list:hover {
-    box-shadow: 0px 2px 0px 0px #0065FC inset;
-    -webkit-box-shadow: 0px 2px 0px 0px #0065FC inset;
-    -moz-box-shadow: 0px 2px 0px 0px #0065FC inset;
+    box-shadow: 0px 2px 0px 0px var(--main-color) inset;
+    -webkit-box-shadow: 0px 2px 0px 0px var(--main-color) inset;
+    -moz-box-shadow: 0px 2px 0px 0px var(--main-color) inset;
 }
 
 .ancre .menu li a:hover {
-    color: #0065FC;
+    color: var(--main-color);
 }
 
                                         /* Dimensions écrans desktop */
@@ -483,8 +483,8 @@ body footer a {
         border-radius: 15px 0px 0px 15px;
         height: 32px;
         width: 40px;
-        background-color: #F2F2F2;
-        border-color: #F2F2F2;
+        background-color: var(--main-bg-color);
+        border-color: var(--main-bg-color);
         border-style: none;
     }
 
@@ -513,11 +513,11 @@ body footer a {
 
     .section_offre {
         border-radius: 20px;
-        background: #F2F2F2;
+        background: var(--main-bg-color);
         column-gap: 2rem;
         row-gap: 2rem;
         border: 20px solid;
-        border-color: #F2F2F2;
+        border-color: var(--main-bg-color);
         flex: 4;
         margin-right: 20px;
     }
@@ -525,7 +525,7 @@ body footer a {
     .section_pop {
         height: 100%;
         border-radius: 20px;
-        background: #F2F2F2;
+        background: var(--main-bg-color);
         flex: 2;
     }
 
@@ -574,7 +574,7 @@ body footer a {
 {
 
     .ancre .menu li a:hover {
-        color: #0065FC;
+        color: var(--main-color);
     }
 
     .fa-magnifying-glass {
@@ -586,8 +586,8 @@ body footer a {
         border-radius: 15px 0px 0px 15px;
         height: 32px;
         width: 40px;
-        background-color: #F2F2F2;
-        border-color: #F2F2F2;
+        background-color: var(--main-bg-color);
+        border-color: var(--main-bg-color);
         border-style: none;
     }
 
@@ -616,17 +616,17 @@ body footer a {
 
     .section_offre {
         border-radius: 20px;
-        background: #F2F2F2;
+        background: var(--main-bg-color);
         column-gap: 2rem;
         row-gap: 2rem;
         border: 20px solid;
-        border-color: #F2F2F2;
+        border-color: var(--main-bg-color);
         margin-bottom: 40px;
     }
 
     .section_pop {
         border-radius: 20px;
-        background: #F2F2F2;
+        background: var(--main-bg-color);
     }
 
     .list-cards-pop {
@@ -685,16 +685,16 @@ body footer a {
     }
 
     .ancre .menu-list {
-        box-shadow: 0px -2px 0px 0px #F2F2F2 inset;
-        -webkit-box-shadow: 0px -2px 0px 0px #F2F2F2 inset;
-        -moz-box-shadow: 0px -2px 0px 0px #F2F2F2 inset;
+        box-shadow: 0px -2px 0px 0px var(--main-bg-color) inset;
+        -webkit-box-shadow: 0px -2px 0px 0px var(--main-bg-color) inset;
+        -moz-box-shadow: 0px -2px 0px 0px var(--main-bg-color) inset;
         width: 50%;
     }
 
     .ancre .menu-list:hover {
-        box-shadow: 0px 2px 0px 0px #0065FC inset;
-        -webkit-box-shadow: 0px 2px 0px 0px #0065FC;
-        -moz-box-shadow: 0px 2px 0px 0px #0065FC inset;
+        box-shadow: 0px 2px 0px 0px var(--main-color) inset;
+        -webkit-box-shadow: 0px 2px 0px 0px var(--main-color);
+        -moz-box-shadow: 0px 2px 0px 0px var(--main-color) inset;
     }
     
     .ancre .menu li {
@@ -746,8 +746,8 @@ body footer a {
         border-radius: 15px 0px 0px 15px;
         height: 32px;
         width: 40px;
-        background-color: #F2F2F2;
-        border-color: #F2F2F2;
+        background-color: var(--main-bg-color);
+        border-color: var(--main-bg-color);
         border-style: none;
     }
 
@@ -802,7 +802,7 @@ body footer a {
     .section_pop {
         height: 100%;
         width: 100%;
-        background: #F2F2F2;
+        background: var(--main-bg-color);
     }
 
     .afficher-plus {
