--- a/css/style.css
+++ b/css/style.css
@@ -102,11 +102,16 @@ body {
     border-radius: 1px;
     border-color: var(--main-bg-color);
     border-style: solid;
-    padding-bottom: 5px;
-    height: 22px;
+    padding-bottom: 4px;
+    height: 23px;
     margin-left: -5px;
     margin-top: 1px;
     display: inline-block;
+    padding-left: 10px;
+}
+
+.search-bar::placeholder {
+    color: black;
 }
 
 .filters-container .filters .disabled-filter {
@@ -720,7 +725,9 @@ footer a:visited {
     }
 
     .search-button {
-        width: 40px;
+        width: 32px;
+        border-radius: 10px 10px 10px 10px;
+        margin-left: -20px;
     }
 
     .rechercher {
